feat: adds webpack 5 toolchain with ts-loader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "esModuleInterop": true,
     "declaration": true,
     "sourceMap": true,
-    "outDir": "./build",
+    "outDir": "./dist",
     "baseUrl": "./",
     "target": "es2020",
     "incremental": true,
