--- a/package.json
+++ b/package.json
@@ -21,18 +21,24 @@
   "homepage": "https://github.com/jvmonteiro/anthill-express#readme",
   "dependencies": {
     "axios": "^0.21.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^4.2.0",
-    "mongoose": "^5.11.6"
+    "mongoose": "^5.11.6",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.12",
+    "@types/passport-local": "^1.0.33",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "eslint-config-prettier": "^7.0.0",
